# nested-sampling

./: README.md  nested-sampling-seminar.html  nested-sampling-seminar.qmd  nested-sampling-tutorial-PRIN.html  nested-sampling-tutorial-PRIN.qmd  nested-sampling.bib  pyproject.toml
sections/: _nested-sampling.qmd  _ns-acceleration-methods.qmd  _pe-general.qmd
