[project]
name = "nested-sampling-seminar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dynesty>=2.1.4",
    "ipyleaflet>=0.19.2",
    "jupyter-cache>=1.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "quarto-cli>=1.5.57",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
]
